Fri Sep 24 15:50:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_to_i): fix rdoc: String#to_i raises an
	  exception when base is invalid. [ruby-core:31685]

Wed Sep 22 16:59:40 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/test_prime.rb (TestPrime#test_new): the warning expected have
	  not been displayed when $VERBOSE == nil. Patch by Shota Fukumori
	  a.k.a. sora_h. [ruby-dev:42272]
	  Recovers $stderr even if StringIO.new fails. Reported by unak.

Wed Sep 22 01:55:48 2010  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_method.rb: fix last commit.

Wed Sep 22 01:49:52 2010  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_method.rb: add a test for [ruby-core:30534].

Wed Sep 22 01:49:52 2010  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_method.rb: add a test for [ruby-core:30534].

Mon Sep 20 23:23:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (bracket): get rid of scanning at the end of the pattern
	  string, not to raise an exception while globbing command line.
	  [ruby-core:32478]

Fri Sep 17 23:44:07 2010  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/xpath_parser.rb, test/rexml/test_xpath.rb:
	add missing method availability check. [ruby-core:32447]
	Reported by Wiebe Cazemier. Thanks!!!

Fri Sep 17 23:23:26 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_sax.rb: don't use thread and sleep to avoid slow test.

Fri Sep 17 23:10:44 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_core.rb: enable.

Fri Sep 17 22:46:02 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/: untabify.

Fri Sep 17 22:29:56 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/: fix fixture data path. All REXML tests are worked.

Fri Sep 17 22:15:15 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_listener.rb: remove needless codes.

Fri Sep 17 22:12:23 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/: import REXML tests from
	http://www.germane-software.com/repos/rexml/trunk/test/.