@@ -665,6 +665,14 @@ rb_funcall3(VALUE recv, ID mid, int argc, const VALUE *argv)
     return rb_call(recv, mid, argc, argv, CALL_PUBLIC);
 }
 
+VALUE
+rb_funcall_passing_block(VALUE recv, ID mid, int argc, const VALUE *argv)
+{
+    PASS_PASSED_BLOCK_TH(GET_THREAD());
+
+    return rb_call(recv, mid, argc, argv, CALL_PUBLIC);
+}
+
 static VALUE
 send_internal(int argc, const VALUE *argv, VALUE recv, call_type scope)
 {
